--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 .container{
     text-align: center;
 }
+
+label{
+    display: block;
+}
+
+input{
+    width:70%;
+    margin:auto;
+    padding: 1rem;
+    height:5vh;
+    display: block;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
